--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
   "name": "princejohn",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "polygon.io": "^2.0.2"
+  },
+  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Tului2020/prince-john.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Tului2020/prince-john/issues"
+  },
+  "homepage": "https://github.com/Tului2020/prince-john#readme"
 }
