--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/preset-react": "^7.12.10",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "chart.js": "^2.9.4",
     "d3": "^6.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
