--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "d3": "^3.5.17",
+    "newsapi": "^2.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
